Fix text overlap with video in the landing about section

--- a/app/styles.css
+++ b/app/styles.css
@@ -197,10 +197,6 @@ li {
   width: 100%;
 }
 
-.landingBody .bodyText {
-  width: 370px;
-}
-
 .eventsBody {
   background-color: #f5f5f5;
   width: 100%;
